--- a/src/app/online-booking-module/components/appointmentstypes/appointmentstypes.component.html
+++ b/src/app/online-booking-module/components/appointmentstypes/appointmentstypes.component.html
@@ -132,7 +132,7 @@
                     [class.active]="SelectedStaff.id === -1">
                     <input type="radio" name="job" value="Code">
                     <div class="icon">
-                        <i class="material-icons">find_replace</i>
+                        <img src="assets\img\icon-02.png" width="100%" height="100%">
                     </div>
                     <h6>Any Optometrist</h6>
                 </div>
@@ -143,7 +143,7 @@
                     [class.active]="SelectedStaff.id === s.id">
                     <input type="radio" name="job" value="Design">
                     <div class="icon">
-                        <i class="material-icons">find_replace</i>
+                        <img src="assets\img\icon-02.png" width="100%" height="100%">
                     </div>
                     <h6>{{s.firstName}} {{s.lastName}}</h6>
                 </div>
