--- a/src/app/online-booking-module/components/appointmentsluts/appointmentsluts.component.html
+++ b/src/app/online-booking-module/components/appointmentsluts/appointmentsluts.component.html
@@ -20,12 +20,22 @@
         <div class="col-sm-3">
         </div>
     </div>
+    <div class="row">
+        <div class="row text-center" *ngIf="ActiveSlots.length>0">
+            <h4 class="info-text">Select time slot</h4>
+            <div class="col-sm-3">
 
-    <div class="row text-center" *ngIf="ActiveSlots.length>0">
-        <h4 class="info-text">Select time slot</h4>
-        <div class="col-sm-2" *ngFor="let slot of ActiveSlots" (click)="onSlotSelect(slot)">
-            <a class="btn btn-next btn-fill btn-danger btn-wd">{{formatSlot(slot.start)}} -
-                {{formatSlot(slot.end)}} </a>
+            </div>
+            <div class="col-sm-3" *ngFor="let slot of ActiveSlots" (click)="onSlotSelect(slot)">
+                <a class="btn btn-next btn-fill btn-danger btn-wd">{{formatSlot(slot.start)}} -
+                    {{formatSlot(slot.end)}} </a>
+            </div>
+            <div class="col-sm-3">
+
+            </div>
+
         </div>
     </div>
+
+    
 </div>
