--- a/src/app/online-booking-module/components/appointmentstypes/appointmentstypes.component.html
+++ b/src/app/online-booking-module/components/appointmentstypes/appointmentstypes.component.html
@@ -125,6 +125,8 @@
 
         <div class="col-sm-10 col-sm-offset-1" *ngIf="isOptomitrist">
             <h4 class="info-text">Please select an Optometrist / Any Optometrist</h4>
+            <h4 *ngIf="StaffErrorMessage" class="info-text" style="color: red;">The selected staff doesnt have any
+                available appointments.</h4>
             <div class="col-sm-1">
             </div>
             <div class="col-sm-2" *ngIf="isOptomitrist" (click)="SelectStaff(-1)">
@@ -147,9 +149,6 @@
                     </div>
                     <h6>{{s.firstName}} {{s.lastName}}</h6>
                 </div>
-            </div>
-            <div *ngIf="StaffErrorMessage">
-                <mat-error>The selected staff doesnt have any available appointments.</mat-error>
             </div>
 
         </div>
