--- a/src/app/online-booking-module/components/appointmentsummary/appointmentsummary.component.html
+++ b/src/app/online-booking-module/components/appointmentsummary/appointmentsummary.component.html
@@ -2,15 +2,21 @@
     <div class="row text-center">
         <h4 class="info-text">Appointment Confirmation Summary</h4>
         <div class="row">
-            <div class="col-md-6 " *ngIf="appointmentTypeData.isOptomitrist">
-                <!-- <div class="checkbox"> -->
-                <label>
-                    <input type="checkbox" [(ngModel)]="OpticianAppointment" (change)="onOpticianAppointmentChange()">
-                </label>
-                <h4>Yes, I would like to book an appointment with an Optician.</h4>
-                <!-- </div> -->
+            <div class="col-md-3">
+                <br>
+            </div>
+            <!--  -->
+            <div class="col-md-6" *ngIf="appointmentTypeData.isOptomitrist">
+                <mat-checkbox [(ngModel)]="OpticianAppointment" (change)="onOpticianAppointmentChange()"
+                    [color]="'primary'">
+                    <h4>Yes, I would like to book an appointment with an Optician.</h4>
+                </mat-checkbox>
+            </div>
+            <div class="col-md-3">
+                <br>
             </div>
         </div>
+        <br>
         <div class="col-md-4 text-left">
             <p><strong>First Name: </strong>{{appointmentConfirmationData.SelectedUser.firstName}}</p>
             <p><strong>Last Name: </strong>{{appointmentConfirmationData.SelectedUser.lastName}}</p>
@@ -38,12 +44,5 @@
         </div>
     </div>
 
-    <div class="row text-center">
-        <h4 class="info-text">An Eyemaxx representative will contact you shortly to
-            confirm you appointment with an Optician</h4>
-        <a href="#covid19" class="btn btn-finish btn-fill btn-danger btn-wd">Book
-            Another Appointment</a>
-        <a href="www.eyemaxx.ca" class="btn btn-previous btn-fill btn-default btn-wd">Go
-            back to homepage</a>
-    </div>
+
 </div>
